policies/host-firewall/rke2/cluster-policy.yaml
# Deployed by Ansible.
# Do not edit manually, changes will be overwritten.
#
# Required RKE2 ports:
# https://docs.rke2.io/install/requirements#inbound-network-rules
#
# Required Istio ports:
# https://istio.io/latest/docs/ops/deployment/application-requirements/#ports-used-by-istio
#
# List of Cilium entities:
# https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based

apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: rke2-all-nodes
spec:
  nodeSelector:
    matchLabels: {}
  ingress:
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "41820" # WireGuard port
              protocol: UDP

    # Allow SSH on WireGuard network.
    - fromCIDR:
        - 10.0.0.0/24
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP

    # Allow kubelet API/metrics from API server and cluster.
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP

    # Allow Cilium CNI health checks.
    - fromEntities:
        - health
        - host
      toPorts:
        - ports:
            - port: "4240"
              protocol: TCP

    # Allow node-to-node CNI overlay traffic.
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8472" # Cilium CNI with VXLAN
              protocol: UDP
            - port: "51871" # Cilium CNI with WireGuard
              protocol: UDP

    # Allow Istio ambient mesh (ztunnel) node-to-node traffic.
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "15008" # HBONE mTLS tunnel (ztunnel)
              protocol: TCP
            - port: "15020" # Merged Prometheus telemetry from ztunnel/agent
              protocol: TCP
            - port: "15021" # Istio health check endpoint
              protocol: TCP
            - port: "15090" # Envoy Prometheus telemetry
              protocol: TCP

    # Allow istiod control plane from within cluster.
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "15010" # Istiod XDS plaintext gRPC
              protocol: TCP
            - port: "15012" # Istiod XDS mTLS gRPC
              protocol: TCP
            - port: "15014" # Istiod control plane metrics
              protocol: TCP
            - port: "15017" # Istio webhook server
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: rke2-master-nodes
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: "true"
  ingress:
    # Allow Kubernetes API from within cluster.
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP

    # Allow RKE2 supervisor API for node bootstrapping and management.
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9345"
              protocol: TCP
    - fromCIDR:
        - 10.0.0.0/24
      toPorts:
        - ports:
            - port: "9345"
              protocol: TCP

    # Allow etcd client/peer ports only between master nodes.
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "2379"
              protocol: TCP
        - ports:
            - port: "2380"
              protocol: TCP
    - fromCIDR:
        - 10.0.0.1/32
        - 10.0.0.2/32
        - 10.0.0.3/32
      toPorts:
        - ports:
            - port: "2379"
              protocol: TCP
        - ports:
            - port: "2380"
              protocol: TCP
